--- a/ruby-node-postgres/Dockerfile-ruby-2.4.2
+++ b/ruby-node-postgres/Dockerfile-ruby-2.4.2
@@ -1,5 +1,8 @@
 FROM ruby:2.4.2
 
+RUN echo deb http://apt.postgresql.org/pub/repos/apt/ trusty-pgdg main >> /etc/apt/sources.list
+RUN wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
+
 RUN apt-get update -qq \
   && apt-get install -y \
     build-essential \
@@ -10,8 +13,7 @@ RUN apt-get update -qq \
     libxml2-dev \
     locales \
     libpq-dev \
-    postgresql-client-common \
-    postgresql-client
+    postgresql-9.6
 
 RUN curl -sL https://deb.nodesource.com/setup_8.x | bash -
 RUN apt-get install -y nodejs
